crates/criticalup-cli/tests/snapshots/cli__remove__help_message.snap
---
source: crates/criticalup-cli/tests/cli/remove.rs
expression: repr
---
exit: exit status: 0

empty stdout

stderr
------
Delete all the products specified in the manifest `criticalup.toml`

Usage:
  criticalup-test remove [OPTIONS]

Options:
      --project <PROJECT>  Path to the manifest `criticalup.toml`
  -h, --help               Print help
------
