crates/criticalup-cli/tests/snapshots/cli__remove__remove_deletes_only_manifest_from_list_and_dir.snap
---
source: crates/criticalup-cli/tests/cli/remove.rs
expression: repr
---
exit: exit status: 0

empty stdout

stderr
------
 INFO Deleting installation 6bb4fe4c8205d18a8eaf0b852c3b29f65805fd80e528af74cf2f1463a911e40e
------
